--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="mtuci.nikitakutselay.lab1.MainActivity">
+    android:layout_height="match_parent" tools:context="mtuci.nikitakutselay.mobileapplicationprogrammingcourse.MainActivity">
 
     <TextView
         android:id="@+id/infoMessage"
@@ -30,5 +30,16 @@
         app:layout_constraintRight_toRightOf="@+id/infoMessage"
         app:layout_constraintTop_toBottomOf="@+id/infoMessage"
         tools:text="@string/author_button" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
